grammar.js
    source_file: ($) =>
      repeat(
        choice(
          // https://www.w3.org/TR/css-color-4/#color-syntax
          $.css_color,

          // https://developer.android.com/reference/android/graphics/Color#encoding
          // https://api.flutter.dev/flutter/dart-ui/Color-class.html
          $.u32_argb,

          $.tailwindcss_color,

          $.xterm_sgr_rgb,

          $._css_hex_color_invalid,
          $._non_symbol,
          $._symbol,
        ),
      ),

    // In preparation for CSS Color Level 5, where CSS color becomes recursive.
    css_color: ($) =>
      choice(
        $.css_hex_color,
        $.css_named_color,
        $.css_keyword_transparent,
        $.css_function_rgb,
        $.css_function_rgba,
        $.css_function_hsl,
        $.css_function_hsla,
        $.css_function_hwb,
        $.css_function_lab,
        $.css_function_oklab,
        $.css_function_lch,
        $.css_function_oklch,
        $.css_function_color,
      ),

    // https://www.w3.org/TR/css-syntax-3/#number-token-diagram
    _css_number: (_) => css_number,
    css_number: ($) => $._css_number,

    // https://www.w3.org/TR/css-syntax-3/#percentage-token-diagram
    _css_percentage: (_) => css_percentage,
    css_percentage: ($) => $._css_percentage,

    // https://www.w3.org/TR/css-color-4/#alpha-syntax
    css_alpha_value: ($) => choice($._css_number, $._css_percentage),

    // https://www.w3.org/TR/css-values-4/#angle-value
    // https://www.w3.org/TR/css-values-4/#typedef-dimension
    _css_angle: (_) => css_angle,
    css_hue: ($) => choice($._css_number, $._css_angle),

    // According to CSS grammar, there is no spaces between the function name and the opening parenthesis.
    // This can be done with token.immediate() alone.
    // We additionally wrap the sequence with token() because
    // we want to reduce parse errors when the text looks like `color: `
    // Without token(), `color: ` will be tokenized as `color` and `:`.
    // tree-sitter considers `:` as parse error because `color` is not
    // immediately followed by `(`.
    // With token(), the color function rule will be considered only when
    // `color(` is tokenized.
    // This can reduce parse error, and hence make parsing faster.
    // The caveat is that the field "function_name" now includes
    // the opening parenthesis at the end.
    // I cannot figure out how to work around that.
    // But this is a very minor issue comparing to the degraded parsing
    // performance in a CSS file containing a lot of occurrences of `color: `
    css_function_name_rgb: (_) =>
      token(seq(css_keyword("rgb"), token.immediate("("))),
    css_function_name_rgba: (_) =>
      token(seq(css_keyword("rgba"), token.immediate("("))),
    css_function_name_oklch: (_) =>
      token(seq(css_keyword("oklch"), token.immediate("("))),
    css_function_rgb: ($) =>
      choice($._css_function_rgb_legacy, $._css_function_rgb_modern),
    css_function_rgba: ($) =>
      choice($._css_function_rgba_legacy, $._css_function_rgba_modern),
    _css_function_rgb_legacy: ($) =>
      choice(
        rgb_legacy_percentage($, $.css_function_name_rgb),
        rgb_legacy_number($, $.css_function_name_rgb),
      ),
    _css_function_rgba_legacy: ($) =>
      choice(
        rgb_legacy_percentage($, $.css_function_name_rgba),
        rgb_legacy_number($, $.css_function_name_rgba),
      ),
    _css_function_rgb_modern: ($) => rgb_modern($, $.css_function_name_rgb),
    _css_function_rgba_modern: ($) => rgb_modern($, $.css_function_name_rgba),

    // https://www.w3.org/TR/css-color-4/#the-hsl-notation
    css_function_oklch: ($) => lch($, $.css_function_name_oklch),

    // https://www.w3.org/TR/css-color-4/#color-function
    css_hex_color: ($) =>
      choice(
        $._css_hex_color_8_digits,
        $._css_hex_color_6_digits,
        $._css_hex_color_4_digits,
        $._css_hex_color_3_digits,
      ),
    _css_hex_color_8_digits: (_) => /#[0-9a-fA-F]{8}/,
    _css_hex_color_6_digits: (_) => /#[0-9a-fA-F]{6}/,
    _css_hex_color_4_digits: (_) => /#[0-9a-fA-F]{4}/,
    _css_hex_color_3_digits: (_) => /#[0-9a-fA-F]{3}/,
    _css_hex_color_invalid: (_) => /#[0-9a-zA-Z]+/,

    // https://www.w3.org/TR/css-color-4/#named-colors
    css_named_color: (_) =>
      choice(
        css_keyword("aliceblue"),
        css_keyword("antiquewhite"),
        css_keyword("aqua"),
        css_keyword("aquamarine"),
        css_keyword("azure"),
        css_keyword("beige"),
        css_keyword("bisque"),
        css_keyword("black"),
        css_keyword("blanchedalmond"),
        css_keyword("blue"),
        css_keyword("blueviolet"),
        css_keyword("brown"),
        css_keyword("burlywood"),
        css_keyword("cadetblue"),
        css_keyword("chartreuse"),
        css_keyword("chocolate"),
        css_keyword("coral"),
        css_keyword("cornflowerblue"),
        css_keyword("cornsilk"),
        css_keyword("crimson"),
        css_keyword("cyan"),
        css_keyword("darkblue"),
        css_keyword("darkcyan"),
        css_keyword("darkgoldenrod"),
        css_keyword("darkgray"),
        css_keyword("darkgreen"),
        css_keyword("darkgrey"),
        css_keyword("darkkhaki"),
        css_keyword("darkmagenta"),
        css_keyword("darkolivegreen"),
        css_keyword("darkorange"),
        css_keyword("darkorchid"),
        css_keyword("darkred"),
        css_keyword("darksalmon"),
        css_keyword("darkseagreen"),
        css_keyword("darkslateblue"),
        css_keyword("darkslategray"),
        css_keyword("darkslategrey"),
        css_keyword("darkturquoise"),
        css_keyword("darkviolet"),
        css_keyword("deeppink"),
        css_keyword("deepskyblue"),
        css_keyword("dimgray"),
        css_keyword("dimgrey"),
        css_keyword("dodgerblue"),
        css_keyword("firebrick"),
        css_keyword("floralwhite"),
        css_keyword("forestgreen"),
        css_keyword("fuchsia"),
        css_keyword("gainsboro"),
        css_keyword("ghostwhite"),
        css_keyword("gold"),
        css_keyword("goldenrod"),
        css_keyword("gray"),
        css_keyword("green"),
        css_keyword("greenyellow"),
        css_keyword("grey"),
        css_keyword("honeydew"),
        css_keyword("hotpink"),
        css_keyword("indianred"),
        css_keyword("indigo"),
        css_keyword("ivory"),
        css_keyword("khaki"),
        css_keyword("lavender"),
        css_keyword("lavenderblush"),
        css_keyword("lawngreen"),
        css_keyword("lemonchiffon"),
        css_keyword("lightblue"),
        css_keyword("lightcoral"),
        css_keyword("lightcyan"),
        css_keyword("lightgoldenrodyellow"),
        css_keyword("lightgray"),
        css_keyword("lightgreen"),
        css_keyword("lightgrey"),
        css_keyword("lightpink"),
        css_keyword("lightsalmon"),
        css_keyword("lightseagreen"),
        css_keyword("lightskyblue"),
        css_keyword("lightslategray"),
        css_keyword("lightslategrey"),
        css_keyword("lightsteelblue"),
        css_keyword("lightyellow"),
        css_keyword("lime"),
        css_keyword("limegreen"),
        css_keyword("linen"),
        css_keyword("magenta"),
        css_keyword("maroon"),
        css_keyword("mediumaquamarine"),
        css_keyword("mediumblue"),
        css_keyword("mediumorchid"),
        css_keyword("mediumpurple"),
        css_keyword("mediumseagreen"),
        css_keyword("mediumslateblue"),
        css_keyword("mediumspringgreen"),
        css_keyword("mediumturquoise"),
        css_keyword("mediumvioletred"),
        css_keyword("midnightblue"),
        css_keyword("mintcream"),
        css_keyword("mistyrose"),
        css_keyword("moccasin"),
        css_keyword("navajowhite"),
        css_keyword("navy"),
        css_keyword("oldlace"),
        css_keyword("olive"),
        css_keyword("olivedrab"),
        css_keyword("orange"),
        css_keyword("orangered"),
        css_keyword("orchid"),
        css_keyword("palegoldenrod"),
        css_keyword("palegreen"),
        css_keyword("paleturquoise"),
        css_keyword("palevioletred"),
        css_keyword("papayawhip"),
        css_keyword("peachpuff"),
        css_keyword("peru"),
        css_keyword("pink"),
        css_keyword("plum"),
        css_keyword("powderblue"),
        css_keyword("purple"),
        css_keyword("rebeccapurple"),
        css_keyword("red"),
        css_keyword("rosybrown"),
        css_keyword("royalblue"),
        css_keyword("saddlebrown"),
        css_keyword("salmon"),
        css_keyword("sandybrown"),
        css_keyword("seagreen"),
        css_keyword("seashell"),
        css_keyword("sienna"),
        css_keyword("silver"),
        css_keyword("skyblue"),
        css_keyword("slateblue"),
        css_keyword("slategray"),
        css_keyword("slategrey"),
        css_keyword("snow"),
        css_keyword("springgreen"),
        css_keyword("steelblue"),
        css_keyword("tan"),
        css_keyword("teal"),
        css_keyword("thistle"),
        css_keyword("tomato"),
        css_keyword("turquoise"),
        css_keyword("violet"),
        css_keyword("wheat"),
        css_keyword("white"),
        css_keyword("whitesmoke"),
        css_keyword("yellow"),
        css_keyword("yellowgreen"),
      ),

    // https://www.w3.org/TR/css-color-4/#transparent-color
    css_keyword_transparent: (_) => css_keyword("transparent"),

    // https://www.w3.org/TR/css-color-4/#missing
    css_keyword_none: (_) => css_keyword("none"),

    _symbol: (_) => symbol,
    _non_symbol: (_) => non_symbol,
