test/corpus/css_function_rgba.txt
=============================
css_function_rgba
=============================

rgba(0, +0, -0)

rgba(+.0, +0.0, +0.0e+0, 0%)

rgba(0 +0 -0)
rgba(-.0 -0.0 -0.0e-0 / 0%)

rgba(0 1% 3% / 0.3)

Rgba(none None NONE)
rgBa(none None NONE / none)

---

(source_file
  (css_color
    (css_function_rgba
      function_name: (css_function_name_rgba)
      r: (css_number)
      g: (css_number)
      b: (css_number)))
  (css_color
    (css_function_rgba
      function_name: (css_function_name_rgba)
      r: (css_number)
      g: (css_number)
      b: (css_number)
      alpha: (css_alpha_value)))
  (css_color
    (css_function_rgba
      function_name: (css_function_name_rgba)
      r: (css_number)
      g: (css_number)
      b: (css_number)))
  (css_color
    (css_function_rgba
      function_name: (css_function_name_rgba)
      r: (css_number)
      g: (css_number)
      b: (css_number)
      alpha: (css_alpha_value)))
  (css_color
    (css_function_rgba
      function_name: (css_function_name_rgba)
      r: (css_number)
      g: (css_percentage)
      b: (css_percentage)
      alpha: (css_alpha_value)))
  (css_color
    (css_function_rgba
      function_name: (css_function_name_rgba)
      r: (css_keyword_none)
      g: (css_keyword_none)
      b: (css_keyword_none)))
  (css_color
    (css_function_rgba
      function_name: (css_function_name_rgba)
      r: (css_keyword_none)
      g: (css_keyword_none)
      b: (css_keyword_none)
      alpha: (css_keyword_none))))
