test/corpus/css_keyword_transparent.txt
=======================
css_keyword_transparent
=======================

transparent Transparent TRANSPARENT

---

(source_file
  (css_color
    (css_keyword_transparent))
  (css_color
    (css_keyword_transparent))
  (css_color
    (css_keyword_transparent)))
