test/corpus/css_named_color.txt
====================================
css_named_color is case-insensitive
====================================

AliceBlue AntiqueWhite

---

(source_file
  (css_color
    (css_named_color))
  (css_color
    (css_named_color)))
